ingress/demo-healthz/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: healthz
  namespace: ingress-nginx
spec:
  selector: { app: healthz }
  ports:
  - name: http
    port: 80
    targetPort: 80
