ingress/demo-healthz/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: healthz
  namespace: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: healthz.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: healthz
            port:
              number: 80
